# rustc-to-go-target

./: Cargo.toml  DESIGN.md  README.md
src/: lib.rs
