[package]
name = "rustc-to-go-target"
version = "0.1.0"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv/issues/244
description = "Convert compile targets supported by rustc (aka target triples) into targets supported by Go."
documentation = "https://docs.rs/rustc-to-go-target"
readme = "README.md"
repository = "https://github.com/JohnScience/rustc-to-go-target"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["rustc", "go", "go", "golang", "compile", "compilation", "targets", "triples"]
categories = ["development-tools::build-utils"] # https://crates.io/category_slugs
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
